# ArkAI

./: LICENSE  README.md  pubspec.yaml
android/app/src/main/: AndroidManifest.xml
backend/: .gitignore  main.py  pyproject.toml  server.py  test.py  util.py
backend/toolchain/: amazon.py  flipkart.py
extension/: README.md  manifest.json  package-lock.json  package.json  popup.html  vite.config.js
extension/src/: analysis.js  auth.js  background.js  content.js  popup.css  popup.js
ios/Runner/: Info.plist
lib/: main.dart
lib/core/constants/: app_constants.dart
lib/core/models/: analysis_model.dart
lib/core/router/: app_router.dart
lib/core/services/: analysis_service.dart
lib/core/theme/: app_theme.dart
lib/core/utils/: product_analyzer_script.dart
lib/core/widgets/: app_address_bar.dart
lib/features/analysis/providers/: analysis_provider.dart
lib/features/analysis/screens/: analysis_screen.dart
lib/features/auth/providers/: auth_provider.dart
lib/features/auth/screens/: login_screen.dart  splash_screen.dart
lib/features/browser/providers/: browser_provider.dart
lib/features/home/screens/: home_screen.dart
macos/Runner/Configs/: AppInfo.xcconfig
mobile_app/android/app/: build.gradle.kts
mobile_app/ios/Runner.xcodeproj/: project.pbxproj
mobile_app/linux/: CMakeLists.txt
mobile_app/linux/runner/: my_application.cc
mobile_app/macos/Runner.xcodeproj/: project.pbxproj
mobile_app/windows/: CMakeLists.txt
mobile_app/windows/runner/: main.cpp
test/: widget_test.dart
web/: index.html  manifest.json
windows/runner/: Runner.rc
(+5 files in other folders)
